problema de padding corrigido

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
     </nav>
     <main>
             <article>
@@ -86,7 +85,7 @@
     </main>
     <footer>
 
-    <p>Site criado por <strong id="footer">Gustavo Guanabara</strong> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVídeo</a>.</p>
+    <p>Site criado por <strong id="footer">Ricardo Seijas</strong> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVídeo</a>.</p>
     
     </footer>
 </body>
